2000-04-07  Dan Winship  <danw@helixcode.com>

	* providers/pop3/camel-pop3-store.c (pop3_connect): Clarify error
	messages.
	(finalize): fix a bug in camel_exception usage
	(pop3_connect): Remember the password after asking for it the
	first time.

2000-04-07  NotZed  <NotZed@HelixCode.com>

	* providers/Makefile.am: Removed smtp for now, its a long way from
	building.
	* providers/smtp/Makefile.in: Removed file that shouldn't have been
	checked in.

2000-04-06  Matt Loper  <matt@helixcode.com>

	* camel-folder-pt-proxy.c (_get_full_name): Remove exception param
	from get_full_name() called, since get_full_name() was changed to
	not have an exception in the last param (see dan's notes below).
	(_get_name): same.

2000-04-06  Dan Winship  <danw@helixcode.com>

	* camel-store.[ch]: Reorganize the folder-fetching methods and
	implement a folder cache so that multiple requests for the same
	folder will yield the same CamelFolder object (as long as it
	remains active). Includes some code to remove no-longer-active
	folders from the cache, but it doesn't get used since nothing is
	ever unref'ed in Camel right now...
	
	* providers/mbox/camel-mbox-store.c:
	* providers/pop3/camel-pop3-store.c: update for CamelStore
	changes.

	* camel-folder.[ch]: Remove the (unused) CamelException argument
	from camel_folder_get_name and camel_folder_get_full_name.
	(camel_folder_set_name): make this go away since changing a
	folder's name after it has been created could result in it
	conflicting with a separately-issued folder.
	
2000-04-05  Dan Winship  <danw@helixcode.com>

	* g_url_new really wanted to take a CamelException. So, rename
	Gurl to CamelURL, g_url_* to camel_url_* (with camel_url_new
	taking an exception), and url-util.[ch] to camel-url.[ch]. Also
	force url->port to be numeric and remove camel_service_getport. (I
	was confused before: the URL RFC says the port must be numeric, so
	we don't want to do getportbyname.)

2000-04-01  Dan Winship  <danw@helixcode.com>
