@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = mbox pop3 sendmail
+SUBDIRS = mbox pop3 sendmail smtp
 
 # these ones are disabled for the moment.
 # MH maildir imap smtp
